--- a/readme
+++ b/readme
@@ -1,2 +1,2 @@
-Descripcion:
-Crear una aplicación web con HTML, CSS y JS basada en el pokedex. Con filtro de pokemones por medio de selectores y avance por medio de botones.
+
+Aplicación basada en el pokedex. Con filtro de pokemones por medio de selectores y avance por medio de botones.
